--- a/app/oxer-html/index.html
+++ b/app/oxer-html/index.html
@@ -191,7 +191,7 @@
                 <div class="detail-box">
                   <div class="heading_container">
                     <h2>
-                      About Class
+                      DevOps class kati garo 
                     </h2>
                   </div>
                   <p>
