--- a/app/oxer-html/index.html
+++ b/app/oxer-html/index.html
@@ -313,7 +313,7 @@ It is a long established fact that a reader will be distracted by the readable c
                     </div>
                     <div class="btn-box">
                       <a href="">
-                        See More
+                        AUR DEKHAE GA BRO
                       </a>
                     </div>
                   </div>
