--- a/app/oxer-html/index.html
+++ b/app/oxer-html/index.html
@@ -120,7 +120,7 @@
                     <div class="detail-box">
                       <h1>
                         Boxing <br />
-                        Center
+                        Center Mero Ho
                       </h1>
                       <hr />
                       <div class="btn-box">
