--- a/app/oxer-html/class.html
+++ b/app/oxer-html/class.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Oxer in git</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -43,7 +43,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> b987659876</span>
                   </a>
                 </li>
                 <li class="">
